# Boussole

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json
design/: CHARTE_GRAPHIQUE.md  README.md  THEMES.md  index-green.html  index.html  kanban.html  listing-form-green.html  listing-form.html  listings.html
docs/: google-calendar-oauth.md
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts  vite.config.ts.timestamp-1775644170627-d96b43cfdb845.mjs
frontend/src/: app.css
frontend/src/lib/: types.ts
frontend/src/lib/stores/: applications.ts  documents.ts  listings.ts
frontend/src/lib/utils/: tauri.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/ai/: +page.svelte
frontend/src/routes/applications/: +page.svelte
frontend/src/routes/calendar/: +page.svelte
frontend/src/routes/documents/: +page.svelte
frontend/src/routes/listings/: +page.svelte
frontend/src/routes/listings/[id]/: +page.svelte
frontend/src/routes/listings/[id]/edit/: +page.svelte
frontend/src/routes/listings/new/: +page.svelte
frontend/src/routes/reports/: +page.svelte
frontend/src/routes/settings/: +page.svelte
scripts/: install-hooks.sh
scripts/hooks/: pre-commit
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_create_job_listings.sql  002_create_applications.sql  003_create_documents.sql  004_create_app_settings.sql
src-tauri/src/: crypto.rs  main.rs
src-tauri/src/commands/: ai.rs  applications.rs  browser.rs  calendar.rs  documents.rs  job_listings.rs  mod.rs  reports.rs
src-tauri/src/models/: ai.rs  application.rs  calendar.rs  document.rs  job_listing.rs  mod.rs
