[workspace]
members = ["."]

[package]
name = "boussole"
version = "0.1.0"
description = "Application de gestion de recherche d'emploi"
authors = ["Vous"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
oauth2 = { version = "5", features = ["reqwest"] }
url = "2"
webbrowser = "1"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
argon2 = "0.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
